[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day-01 = { path = "day-01" }
day-02 = { path = "day-02" }
day-03 = { path = "day-03" }
day-04 = { path = "day-04" }


[workspace]
members = ["day-01", "cargo-day", "day-02", "day-03", "day-04"]
